"""initial schema - all tables

Revision ID: 8d245daa6ac6
Revises: 
Create Date: 2026-03-31 19:27:54.860355

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '8d245daa6ac6'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('products',
    sa.Column('pid', sa.String(), nullable=False),
    sa.Column('pname', sa.String(), nullable=False),
    sa.Column('category', sa.String(), nullable=True),
    sa.Column('unit_measurement', sa.String(), nullable=True),
    sa.PrimaryKeyConstraint('pid')
    )
    op.create_table('users',
    sa.Column('uid', sa.String(), nullable=False),
    sa.Column('full_name', sa.String(), nullable=False),
    sa.Column('role', sa.String(), nullable=False),
    sa.Column('email', sa.String(), nullable=False),
    sa.Column('password_hash', sa.String(), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=True),
    sa.PrimaryKeyConstraint('uid'),
    sa.UniqueConstraint('email')
    )
    op.create_table('vendors',
    sa.Column('vid', sa.String(), nullable=False),
    sa.Column('vendor_name', sa.String(), nullable=False),
    sa.Column('location', sa.String(), nullable=True),
    sa.Column('contact', sa.String(), nullable=True),
    sa.Column('email', sa.String(), nullable=True),
    sa.PrimaryKeyConstraint('vid')
    )
    op.create_table('customers',
    sa.Column('cid', sa.String(), nullable=False),
    sa.Column('uid', sa.String(), nullable=False),
    sa.Column('customer_name', sa.String(), nullable=False),
    sa.Column('category', sa.String(), nullable=True),
    sa.Column('location', sa.String(), nullable=True),
    sa.Column('pincode', sa.Integer(), nullable=True),
    sa.Column('contact', sa.String(), nullable=True),
    sa.Column('email', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['uid'], ['users.uid'], ),
    sa.PrimaryKeyConstraint('cid')
    )
    op.create_table('vendor_orders',
    sa.Column('void', sa.String(), nullable=False),
    sa.Column('vid', sa.String(), nullable=False),
    sa.Column('created_by', sa.String(), nullable=False),
    sa.Column('order_date', sa.Date(), nullable=False),
    sa.Column('status', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['created_by'], ['users.uid'], ),
    sa.ForeignKeyConstraint(['vid'], ['vendors.vid'], ),
    sa.PrimaryKeyConstraint('void')
    )
    op.create_table('vendor_products',
    sa.Column('vpid', sa.String(), nullable=False),
    sa.Column('vid', sa.String(), nullable=False),
    sa.Column('pid', sa.String(), nullable=False),
    sa.Column('vendor_prefix', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['pid'], ['products.pid'], ),
    sa.ForeignKeyConstraint(['vid'], ['vendors.vid'], ),
    sa.PrimaryKeyConstraint('vpid')
    )
    op.create_table('customer_orders',
    sa.Column('coid', sa.String(), nullable=False),
    sa.Column('cid', sa.String(), nullable=False),
    sa.Column('created_by', sa.String(), nullable=False),
    sa.Column('order_date', sa.Date(), nullable=False),
    sa.Column('status', sa.String(), nullable=True),
    sa.Column('priority', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['cid'], ['customers.cid'], ),
    sa.ForeignKeyConstraint(['created_by'], ['users.uid'], ),
    sa.PrimaryKeyConstraint('coid')
    )
    op.create_table('skus',
    sa.Column('skuid', sa.String(), nullable=False),
    sa.Column('vpid', sa.String(), nullable=False),
    sa.Column('current_buy', sa.Numeric(precision=10, scale=2), nullable=True),
    sa.Column('current_sell', sa.Numeric(precision=10, scale=2), nullable=True),
    sa.Column('specs', sa.JSON(), nullable=True),
    sa.Column('stock_qty', sa.Integer(), nullable=True),
    sa.Column('threshold', sa.Integer(), nullable=True),
    sa.ForeignKeyConstraint(['vpid'], ['vendor_products.vpid'], ),
    sa.PrimaryKeyConstraint('skuid')
    )
    op.create_table('vendor_invoices',
    sa.Column('inv_id', sa.String(), nullable=False),
    sa.Column('void', sa.String(), nullable=False),
    sa.Column('invoice_date', sa.Date(), nullable=False),
    sa.Column('vendor_inv_num', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['void'], ['vendor_orders.void'], ),
    sa.PrimaryKeyConstraint('inv_id')
    )
    op.create_table('customer_invoices',
    sa.Column('cinv_id', sa.String(), nullable=False),
    sa.Column('coid', sa.String(), nullable=False),
    sa.Column('created_by', sa.String(), nullable=False),
    sa.Column('invoice_date', sa.Date(), nullable=False),
    sa.Column('status', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['coid'], ['customer_orders.coid'], ),
    sa.ForeignKeyConstraint(['created_by'], ['users.uid'], ),
    sa.PrimaryKeyConstraint('cinv_id')
    )
    op.create_table('stock_adjustments',
    sa.Column('adj_id', sa.String(), nullable=False),
    sa.Column('skuid', sa.String(), nullable=False),
    sa.Column('adjusted_by', sa.String(), nullable=False),
    sa.Column('adj_date', sa.Date(), nullable=False),
    sa.Column('delta', sa.Integer(), nullable=False),
    sa.Column('reason', sa.String(), nullable=True),
    sa.Column('ref_doc_id', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['adjusted_by'], ['users.uid'], ),
    sa.ForeignKeyConstraint(['skuid'], ['skus.skuid'], ),
    sa.PrimaryKeyConstraint('adj_id')
    )
    op.create_table('vendor_invoice_details',
    sa.Column('detail_id', sa.String(), nullable=False),
    sa.Column('inv_id', sa.String(), nullable=False),
    sa.Column('skuid', sa.String(), nullable=False),
    sa.Column('ordered_qty', sa.Integer(), nullable=True),
    sa.Column('arrived_qty', sa.Integer(), nullable=True),
    sa.Column('purchase_price', sa.Numeric(precision=10, scale=2), nullable=True),
    sa.ForeignKeyConstraint(['inv_id'], ['vendor_invoices.inv_id'], ),
    sa.ForeignKeyConstraint(['skuid'], ['skus.skuid'], ),
    sa.PrimaryKeyConstraint('detail_id')
    )
    op.create_table('vendor_order_details',
    sa.Column('vo_detail_id', sa.String(), nullable=False),
    sa.Column('void', sa.String(), nullable=False),
    sa.Column('skuid', sa.String(), nullable=False),
    sa.Column('ordered_qty', sa.Integer(), nullable=False),
    sa.Column('agree_price', sa.Numeric(precision=10, scale=2), nullable=True),
    sa.ForeignKeyConstraint(['skuid'], ['skus.skuid'], ),
    sa.ForeignKeyConstraint(['void'], ['vendor_orders.void'], ),
    sa.PrimaryKeyConstraint('vo_detail_id')
    )
    op.create_table('vendor_returns',
    sa.Column('v_return_id', sa.String(), nullable=False),
    sa.Column('inv_id', sa.String(), nullable=False),
    sa.Column('initiated_by', sa.String(), nullable=False),
    sa.Column('return_date', sa.Date(), nullable=False),
    sa.Column('reason', sa.String(), nullable=True),
    sa.Column('status', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['initiated_by'], ['users.uid'], ),
    sa.ForeignKeyConstraint(['inv_id'], ['vendor_invoices.inv_id'], ),
    sa.PrimaryKeyConstraint('v_return_id')
    )
    op.create_table('customer_inv_details',
    sa.Column('cdetail_id', sa.String(), nullable=False),
    sa.Column('cinv_id', sa.String(), nullable=False),
    sa.Column('skuid', sa.String(), nullable=False),
    sa.Column('ordered_qty', sa.Integer(), nullable=True),
    sa.Column('delivered_qty', sa.Integer(), nullable=True),
    sa.Column('sale_price', sa.Numeric(precision=10, scale=2), nullable=True),
    sa.ForeignKeyConstraint(['cinv_id'], ['customer_invoices.cinv_id'], ),
    sa.ForeignKeyConstraint(['skuid'], ['skus.skuid'], ),
    sa.PrimaryKeyConstraint('cdetail_id')
    )
    op.create_table('customer_returns',
    sa.Column('c_return_id', sa.String(), nullable=False),
    sa.Column('cinv_id', sa.String(), nullable=False),
    sa.Column('initiated_by', sa.String(), nullable=False),
    sa.Column('return_date', sa.Date(), nullable=False),
    sa.Column('reason', sa.String(), nullable=True),
    sa.Column('status', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['cinv_id'], ['customer_invoices.cinv_id'], ),
    sa.ForeignKeyConstraint(['initiated_by'], ['users.uid'], ),
    sa.PrimaryKeyConstraint('c_return_id')
    )
    op.create_table('dispatches',
    sa.Column('dispatch_id', sa.String(), nullable=False),
    sa.Column('cinv_id', sa.String(), nullable=False),
    sa.Column('dispatched_by', sa.String(), nullable=False),
    sa.Column('dispatch_date', sa.Date(), nullable=False),
    sa.Column('carrier', sa.String(), nullable=True),
    sa.Column('tracking_num', sa.String(), nullable=True),
    sa.Column('status', sa.String(), nullable=True),
    sa.ForeignKeyConstraint(['cinv_id'], ['customer_invoices.cinv_id'], ),
    sa.ForeignKeyConstraint(['dispatched_by'], ['users.uid'], ),
    sa.PrimaryKeyConstraint('dispatch_id')
    )
    op.create_table('payments',
    sa.Column('payment_id', sa.String(), nullable=False),
    sa.Column('cinv_id', sa.String(), nullable=False),
    sa.Column('recorded_by', sa.String(), nullable=False),
    sa.Column('payment_date', sa.Date(), nullable=False),
    sa.Column('amount', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('method', sa.String(), nullable=True),
    sa.Column('reference', sa.String(), nullable=True),
    sa.Column('notes', sa.Text(), nullable=True),
    sa.ForeignKeyConstraint(['cinv_id'], ['customer_invoices.cinv_id'], ),
    sa.ForeignKeyConstraint(['recorded_by'], ['users.uid'], ),
    sa.PrimaryKeyConstraint('payment_id')
    )
    op.create_table('vendor_return_details',
    sa.Column('vr_detail_id', sa.String(), nullable=False),
    sa.Column('v_return_id', sa.String(), nullable=False),
    sa.Column('skuid', sa.String(), nullable=False),
    sa.Column('return_qty', sa.Integer(), nullable=False),
    sa.Column('credit_amount', sa.Numeric(precision=10, scale=2), nullable=True),
    sa.ForeignKeyConstraint(['skuid'], ['skus.skuid'], ),
    sa.ForeignKeyConstraint(['v_return_id'], ['vendor_returns.v_return_id'], ),
    sa.PrimaryKeyConstraint('vr_detail_id')
    )
    op.create_table('customer_return_details',
    sa.Column('cr_detail_id', sa.String(), nullable=False),
    sa.Column('c_return_id', sa.String(), nullable=False),
    sa.Column('skuid', sa.String(), nullable=False),
    sa.Column('return_qty', sa.Integer(), nullable=False),
    sa.Column('refund_amount', sa.Numeric(precision=10, scale=2), nullable=True),
    sa.ForeignKeyConstraint(['c_return_id'], ['customer_returns.c_return_id'], ),
    sa.ForeignKeyConstraint(['skuid'], ['skus.skuid'], ),
    sa.PrimaryKeyConstraint('cr_detail_id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('customer_return_details')
    op.drop_table('vendor_return_details')
    op.drop_table('payments')
    op.drop_table('dispatches')
    op.drop_table('customer_returns')
    op.drop_table('customer_inv_details')
    op.drop_table('vendor_returns')
    op.drop_table('vendor_order_details')
    op.drop_table('vendor_invoice_details')
    op.drop_table('stock_adjustments')
    op.drop_table('customer_invoices')
    op.drop_table('vendor_invoices')
    op.drop_table('skus')
    op.drop_table('customer_orders')
    op.drop_table('vendor_products')
    op.drop_table('vendor_orders')
    op.drop_table('customers')
    op.drop_table('vendors')
    op.drop_table('users')
    op.drop_table('products')
    # ### end Alembic commands ###
